# rosettascratch

./: .gitignore  CMakeLists.txt  Output-for-lines-of-text  Output-for-lines-of-text.hs  README.md  ScopeTimer.h  amb.cpp  church-numerals.cpp  coreguidelines.cpp  euler-constant.cpp  faulhabers-triangle.cpp  first-class-functions-numbers.cpp  gamma-function.cpp  halt-and-catch-fire.cpp  horizontal-sundial-calculations.cpp  host-introspection.cpp  inner-class.cpp  iterators.cpp  least-square.cpp  link-list-removal.cpp  list-monad.cpp  literals-floating-point.cpp  longest-string-challenge.cpp  maybe-monad.cpp  output-for-lines-of-text.cpp  output-for-pairs-of-numbers.cpp  pi.cpp  printmatrix.cpp  pythagorean.cpp  rosettaCode.txt  rosettascratch.kdev4  same-fringe.cpp  scratch.cpp  special-variables.cpp  start-from-a-main-routine.cpp  sum-data-type.cpp  sum-of-cubes.cpp  tropical-algebra.cpp  writer-monad.cpp
.kdev4/: rosettascratch.kdev4
